Docs cleanup: fix encoding and align setup/run instructions